CJS/ESM Husky for packages where it was missing.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "ESNext",
+    "target": "es5",
+    "outDir": "dist/esm",
+    "moduleResolution": "Node",
     "lib": [
       "dom",
       "dom.iterable",
@@ -8,8 +11,6 @@
     ],
     "noEmit": false,
     "rootDir": "src",
-    "outDir": "dist",
-    "target": "es5",
     "declaration": true,
     "sourceMap": true
   },
